# WEB4TG-BOT

./: .gitignore  .replit  README.md  bot.py  pyproject.toml  replit.md  requirements.txt  status.py
attached_assets/: CONSTRUCTOR_PRICING_1770203393778.md  Pasted---1770138379292_1770138379293.txt  Pasted---1770138518724_1770138518724.txt  Pasted-ValueError-TELEGRAM-BOT-TOKEN-is-not-set-File-app-src-c_1770147275606.txt  ai-agent-knowledge-base_1770135411189.md
src/: __init__.py  ab_testing.py  achievements.py  advanced_analytics.py  ai_client.py  ai_tools_extended.py  analytics.py  bot_api.py  brief_generator.py  broadcast.py  cache.py  calculator.py  calendar_booking.py  client_dashboard.py  config.py  consultation.py  context_builder.py  conversation_qa.py  countdown_offers.py  crm_dashboard.py  crm_export.py  daily_digest.py  database.py  demo_preview.py  dialog_rag.py  feedback_loop.py  followup.py  handlers.py  keyboards.py  knowledge_base.py  kp_generator.py  leads.py  loyalty.py  manager_coaching.py  monitoring.py  multilang.py  onboarding.py  package_comparison.py  payments.py  portfolio_showcase.py  (+18 more)
src/handlers/: __init__.py  admin.py  callbacks.py  commands.py  media.py  messages.py  utils.py
